# fastapi-sample

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/skills/fastapi-python/: SKILL.md
.github/skills/fastapi-python/references/: routers.md  schemas.md  telemetry.md  testing.md
app/: main.py  store.py  telemetry.py
app/routers/: employees.py
app/schemas/: employee.py
tests/: test_employees.py
